--- a/internal/projects/bulleit/Interfaces/InboxViewController.xib
+++ b/internal/projects/bulleit/Interfaces/InboxViewController.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11B26</string>
+		<string key="IBDocument.SystemVersion">11C74</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1138</string>
-		<string key="IBDocument.HIToolboxVersion">566.00</string>
+		<string key="IBDocument.AppKitVersion">1138.23</string>
+		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">933</string>
@@ -48,7 +48,7 @@
 							<object class="IBUIImageView" id="1014841473">
 								<reference key="NSNextResponder" ref="566224778"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{0, -187}, {320, 240}}</string>
+								<string key="NSFrame">{{0, -312}, {320, 365}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -296,7 +296,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">shelf_background.png</string>
-			<string key="NS.object.0">{320, 240}</string>
+			<string key="NS.object.0">{320, 365}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
