--- a/internal/projects/bulleit/Interfaces/PeopleViewController.xib
+++ b/internal/projects/bulleit/Interfaces/PeopleViewController.xib
@@ -53,7 +53,7 @@
 							<object class="IBUIImageView" id="301396522">
 								<reference key="NSNextResponder" ref="563354220"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, -234}, {320, 245}}</string>
+								<string key="NSFrame">{{0, -356}, {320, 365}}</string>
 								<reference key="NSSuperview" ref="563354220"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="134228117"/>
@@ -661,7 +661,6 @@
 							<string>facebookButton</string>
 							<string>nipple</string>
 							<string>searchField</string>
-							<string>signInAuthView</string>
 							<string>signInFacebookActivityIndicator</string>
 							<string>signInFacebookConnectButton</string>
 							<string>signInFacebookView</string>
@@ -678,7 +677,6 @@
 							<string>UIButton</string>
 							<string>UIImageView</string>
 							<string>STSearchField</string>
-							<string>UIView</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIButton</string>
 							<string>UIView</string>
@@ -698,7 +696,6 @@
 							<string>facebookButton</string>
 							<string>nipple</string>
 							<string>searchField</string>
-							<string>signInAuthView</string>
 							<string>signInFacebookActivityIndicator</string>
 							<string>signInFacebookConnectButton</string>
 							<string>signInFacebookView</string>
@@ -726,10 +723,6 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">searchField</string>
 								<string key="candidateClassName">STSearchField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">signInAuthView</string>
-								<string key="candidateClassName">UIView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">signInFacebookActivityIndicator</string>
@@ -883,7 +876,7 @@
 							<string>doneButtonPressed:</string>
 							<string>editProfileButtonPressed:</string>
 							<string>logoutButtonPressed:</string>
-							<string>notificationsButtonPressed:</string>
+							<string>sharingButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -900,7 +893,7 @@
 							<string>doneButtonPressed:</string>
 							<string>editProfileButtonPressed:</string>
 							<string>logoutButtonPressed:</string>
-							<string>notificationsButtonPressed:</string>
+							<string>sharingButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -917,7 +910,7 @@
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
-								<string key="name">notificationsButtonPressed:</string>
+								<string key="name">sharingButtonPressed:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 						</object>
@@ -966,7 +959,7 @@
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{16, 16}</string>
-				<string>{320, 240}</string>
+				<string>{320, 365}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
